add fileservice